# stewie

./: .coverage  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONFIG.md  DEFERRED_FIXES.md  INTERFACE.md  LICENSE  PRD.md  README.md  README_dustgym.md  SECURITY.md  THIRD_PARTY.md  building_taxonomy.md  conftest.py  ipex-terrain-sim-spec.md  mkdocs.yml  plan_tier2_slip_rl.md  platform_architecture.md  pyproject.toml  requirements_manifest.yaml
.github/: PULL_REQUEST_TEMPLATE.md
dart/: ablation.py  annotate.py  articulated_parallax.py  articulated_shadow.py  camera_rig.py  camera_select.py  comparison.py  datasets.py  dem_anchor.py  dem_cross.py  dem_import.py  dem_ingest.py  depth_truth.py  dock_pose.py  features.py  fixtures  hazard_map.py  horizon.py  illumination.py  illumination_cost.py  integrated_slam.py  landmarks.py  localization.py  map_channel.py  mapping.py  masking.py  obstacle_map.py  pose_graph.py  pose_graph_se2.py  posegraph.py  positioning.py  posture_coverage.py  posture_select.py  rock_detect.py  rock_taxonomy.py  shadow_edge_sigma.py  shadow_extract.py  shadow_height.py  shadow_predict.py  shadow_sigma_calibration.py  (+53 more)
demo/: accuracy_study.py  deck_figures.py  deck_split.py  diagrams.py  end_to_end.py  height_xcheck.py  image_p5_height.py  image_shadow_measurement.py  path_nav.py  render_loop.py  sensor_slam.py  tune.py  wire_all.py  wireframe_gif.py
deploy/: Dockerfile.backend  Dockerfile.frontend  README.md  compose.yml  nginx.conf
dissertation/: test_audit_reassessment.py  test_bridge.py  test_differentials.py  test_g1_capture.py  test_gate_validation.py  test_height_xcheck.py  test_p1_gates.py  test_posegraph.py  test_posture_fov.py  test_proprioception_consumer.py  validate_g1_g2.py
docs/: _config.yml  architecture_review.md  architecture_review_2026-06-05.md  architecture_review_2026-06-05_realworld.md  architecture_review_2026-06-06_full.md  autonomous_planning_review.md  bodies_sysrev.md  chrono_bringup_log.md  chrono_integration.md  ci_workflow.yml  data_book.md  dem_terrain_contract.md  ezrassor_assets.md  implementation_plan_2026-06-06.md  index.md  lac_reimplementation_eval.md  lunar_dem_10km_eval.md  map_reference.md  prd_gap_analysis_2026-06-06.md  primer_astrophysics.md  reference_platform.md  related_work.md  render_fidelity_spec.md  research_workspace.md  robotics_curriculum_diff.md  sensor_bridge_contract.md  slam_pipeline_analysis.md  spec_coverage.md  sun_sweep_manifest.md  ui_eval_2026-06-06.md  ui_ux_assessment_2026-06-06.md  uiux_audit_2026-06-09.md  vehicle_ipex.md  world_model.md
dustgym/: ARTIFACTS.md  CONTRIBUTING.md  PRD.md  __init__.py
godot_sidecar/: apriltag_gen.gd  boulder_manifest.gd  capture_seq.gd  depart_spiral.gd  distortion.gdshader  render_layers.sh  render_test.gd  render_test.tscn  sensors_emit.gd  sidecar.gd
leap/: challenge.py  challenge_runner.py  skill_env.py  structures.py  terrain_target_env.py  test_challenge.py  test_challenge_runner.py  test_skill_env.py  test_structures.py  test_terrain_target_env.py  test_worksite_env.py  worksite_env.py
lode/: actions.py  adaptive_planner.py  autonomy.py  berm_fsm.py  dock_fsm.py  mission_planner.py  path_track.py  planner_views.py  playthrough.py  psr_supervisor.py  resync.py  rock_costs.py  scheduler_env.py  self_optimizing.py  test_adaptive_planner.py  test_autonomy.py  test_berm_fsm.py  test_berm_rehazard.py  test_dem_georef.py  test_dock_fsm.py  test_mission_planner.py  test_path_track.py  test_perception_gates.py  test_playthrough.py  test_psr_supervisor.py  test_resync.py  test_rock_costs.py  test_scheduler_env.py  test_self_optimizing.py  test_zones.py  zones.py
papers/: CITATIONS.md
planet_browser/: README.md  __init__.py  adaptive_planner.py  autonomy.py  bodies.json  dem_import.py  gen_bodies_json.py  index.html  localization.py  map_channel.py  mission_planner.py  requirements.txt  server.py  structures.py  test_adaptive_planner.py  test_appdata.py  test_autonomy.py  test_autonomy_weight.py  test_fetch_assets.py  test_geo_siting.py  test_map_channel.py  test_map_layers.py  test_mission_planner.py  test_plan_result.py  test_server.py  test_server_install.py  test_server_logging.py  test_soil_override.py  test_structures.py
scripts/: assemble_flythrough_gif.py  beta_accept.sh  build_crater_boulders_worked.py  build_cutdepth_review.py  build_flythrough_1cm.py  build_from_dem.py  build_public_cut.py  chrono_clast_producer.py  chrono_scm_export.py  chrono_scm_export_demo.py  chrono_scm_rover.py  convert_rover_mesh.py  crop_lola_tile.py  dem_acceptance.py  fetch_dem_data.py  gen_ipex_mesh.py  make_active_perception_figure.py  make_material_figure.py  make_self_optimizing_figure.py  plan_render_pipeline.py  req_trace.py  test_chrono_clast_producer.py  test_gen_ipex_mesh.py  test_plan_render_pipeline.py  test_req_trace.py  test_requirements_manifest.py  ui_eval.py  validate_g1_g2.py  verify_john_forcepush.sh
solnav/: .gitignore  README.md  pyproject.toml
stewie/: __init__.py  lander.py  test_lander.py
terrain_authority/: active_perception_env.py  cem.py  challenge.py  challenge_runner.py  column_state.py  config.py  constants.py  dem_import.py  dem_io.py  dem_overlay.py  dem_stats.py  drive.py  hexviz.py  illumination.py  io_fields.py  ipex_specs.py  material.py  posture_kinematics.py  postures.py  procgen_csfd.py  procgen_seed.py  proprioception.py  quadtree.py  rassor_mass_model.py  refinement.py  registration.py  rover.py  rover_env.py  runtime_packet.py  sandpile.py  scenes.py  scheduler_env.py  self_optimizing.py  skill_env.py  slip.py  stability.py  terrain_target_env.py  terramechanics.py  test_active_perception_env.py  test_bodies.py  (+40 more)
tests/: test_audit_reassessment.py  test_bridge.py  test_camera_rig.py  test_camera_rig_extrinsics.py  test_datasets.py  test_dem_cross.py  test_dem_stereo.py  test_features.py  test_g1_pipeline.py  test_gate_validation.py  test_hazard_map.py  test_height_xcheck.py  test_horizon.py  test_imu_wheel.py  test_katwijk.py  test_landmarks.py  test_mapping.py  test_masking.py  test_metrics.py  (+22 more)
(+825 files in other folders)
