[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "stewie"
version = "0.1.0"
description = "Gymnasium environments for off-world surface vehicles and autonomous construction, on a mass-conserving terramechanics authority parameterized per planetary body (Moon/Mars/Earth/...). IPEx / Lunar Autonomy Challenge lineage."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "John McCardle" },   # terrain_authority terramechanics + WorkSite (CC0 core)
    { name = "Aaron Storey" },    # dustgym Gymnasium suite, per-planet bodies, RL/scheduling
]
keywords = ["gymnasium", "reinforcement-learning", "planetary", "lunar", "mars", "rover", "terramechanics", "regolith", "isru", "robotics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Robot Framework",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.21,<3",
    "scipy>=1.7,<2",
    "gymnasium>=0.29,<2",
    "tomli>=1.1.0; python_version < '3.11'",   # DUSTGYM_CONFIG TOML overlay (stdlib tomllib on >=3.11)
]

[project.optional-dependencies]
rl = ["torch<3", "stable-baselines3>=2.0,<3"]          # PPO / model-free baselines
planner = ["matplotlib", "pyproj"]                     # the mission-planner product: report figures + non-polar DEM reproject
server = ["fastapi>=0.110,<1", "uvicorn>=0.20,<1", "matplotlib", "pyproj", "imageio>=2.31", "scipy>=1.10"]   # the ASGI planner server (dustgym-serve; PRD N7/N8). MUST carry the planner's import-time deps (mission_planner imports matplotlib at module load; latlon site-pick uses pyproj) so `pip install dustgym[server]` yields a working server (RB-06).
render = ["trimesh>=4,<5"]                             # render-asset tooling (scripts/gen_ipex_mesh.py: the CC0 IPEx body)
# CI installs .[dev]; it MUST cover every import-time dep of the CONFIGURED test suite (testpaths =
# terrain_authority + planet_browser + scripts), hence trimesh (scripts/) + pyyaml (requirement manifest test).
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.6", "mypy>=1.8", "matplotlib", "pyproj", "fastapi>=0.110,<1", "uvicorn>=0.20,<1", "httpx>=0.24", "trimesh>=4,<5", "pyyaml>=6,<7",
       # the perception/eval test graph (dart + stewie.eval; M2 fold): stereo, image IO, timeouts
       "opencv-python-headless>=4.8", "imageio>=2.31", "pytest-timeout>=2"]

[project.urls]
Homepage = "https://github.com/dustgym/dustgym"
Source = "https://github.com/dustgym/dustgym"
"Core physics provenance" = "https://github.com/jmccardle/roversim"

# Forward-compatible Gymnasium plugin hook (for versions that auto-load entry points). Current
# Gymnasium needs `import dustgym` (registers on import) before `gymnasium.make("Dust/...")`.
[project.entry-points."gymnasium.envs"]
Dust = "dustgym:register_envs"

# The mission-planner product server (PRD N13): `dustgym-serve` -> the planner + mission-control report API.
[project.scripts]
stewie-serve = "stewie.server.server:main"
dustgym-serve = "stewie.server.server:main"   # deprecated alias
# fetch + checksum-verify the real LOLA Haworth DEM (PGDA Product 78); not bundled in the wheel
dustgym-fetch-dem = "planet_browser.fetch_assets:main"

[tool.setuptools]
packages = ["stewie", "stewie.physics", "stewie.terrain", "stewie.twin", "stewie.specs",
            "stewie.envs", "stewie.server", "stewie.eval", "stewie.bridge", "stewie.sensors",
            "dart", "dart.geometry", "lode", "leap", "forge", "dustgym"]

[tool.setuptools.package-data]
# ship the planner's web UI + per-body config + the real-DEM ingest fixtures + intern sample missions
# and tutorial with the wheel
"stewie.server" = ["*.html", "*.json", "fixtures/*", "sample_missions/*.json", "*.md"]

# --- quality + test config (PRD N11) ---------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Enforced standard: pyflakes (F) -- unused imports/vars, undefined names, f-string/format errors.
# The broader style rules (E/W line-length etc.) are intentionally advisory, not gated.
select = ["F"]

[tool.pytest.ini_options]
testpaths = ["stewie", "dart", "lode", "leap", "forge", "scripts"]
addopts = "-q"
markers = [
    "gpu: needs a GPU (Vulkan/CUDA)",
    "godot: needs the Godot sidecar binary",
    "colmap: needs pycolmap",
    "chrono: needs pychrono",
]

# --- coverage (PRD N11): measure SOURCE only (test files excluded), CLI mains excluded ------------
[tool.coverage.run]
source = ["stewie", "dart", "lode", "leap", "forge"]   # the monorepo packages (rename 2026-06-10)
omit = [
    "*/test_*.py",
    "*/tests.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 1
# Gate (PRD N11): the suite covers ~94% of source; 85 leaves headroom while blocking regressions.
# (dem_import's raw-GeoTIFF byte-parser is uncoverable here -- the source .tif is not committed, only
#  its processed products, so fabricating one would violate the no-synthetic-data rule.)
fail_under = 85

# --- type checking (PRD N11) ----------------------------------------------------------------------
# The mission-planning layer (planet_browser/*) + the core physics (terramechanics/slip/drive/rover/
# bodies/vehicles/...) are type-checked. The sim scene-builder, RL envs, DEM ingest, and viz modules are
# on a documented RATCHET (ignore_errors below) to be typed incrementally -- shrink that list over time.
[tool.mypy]
python_version = "3.10"
files = ["stewie", "dart", "lode", "leap", "forge", "dustgym"]
exclude = '(test_.*\.py|tests\.py)$'
ignore_missing_imports = true          # gymnasium/torch/pyproj/fastapi/matplotlib ship no/partial stubs here
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# RATCHET: modules pending full typing. NOT here (so they ARE checked): every planet_browser module +
# terramechanics/slip/drive/rover/bodies/vehicles/material/challenge/registration/ipex_specs/constants/...
module = [
    "dart.dem_import",
    "leap.skill_env",
    "leap.terrain_target_env",
    "leap.worksite_env",
    "lode.scheduler_env",
    "lode.self_optimizing",
    "stewie.envs.active_perception_env",
    "stewie.envs.rover_env",
    "stewie.physics.column_state",
    "stewie.physics.quadtree",
    "stewie.physics.rassor_mass_model",
    "stewie.physics.refinement",
    "stewie.physics.worksite",
    "stewie.specs.config",
    "stewie.terrain.dem_overlay",
    "stewie.terrain.procgen",
    "stewie.terrain.procgen_csfd",
    "stewie.terrain.scenes",
    "stewie.terrain.tiles_mosaic",
]
ignore_errors = true
